# repo-assistant

./: .env.example  LICENSE  README.md  main.py  pyproject.toml  webui.py
src/: agent.py  github_processor.py  mcp_client.py  prompts.py  tools.py  utils.py
tests/: test_agent.py  test_gitingest.py  test_mcp_server.py
